[gd_scene load_steps=4 format=3 uid="uid://co1ntmvskmiex"]

[ext_resource type="Script" path="res://ui/textbox/textbox.gd" id="1_vi0s2"]
[ext_resource type="FontFile" uid="uid://bkgdhvj2ggyfo" path="res://assets/fonts/CONSOLA.TTF" id="2_03f5e"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_8litx"]
bg_color = Color(0, 0, 0, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(1, 1, 1, 1)

[node name="Textbox" type="CanvasLayer"]
layer = 3
script = ExtResource("1_vi0s2")

[node name="TextboxContainer" type="MarginContainer" parent="."]
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = 6.0
offset_top = 222.0
offset_right = -32.0
offset_bottom = 293.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = -67
theme_override_constants/margin_right = -16
theme_override_constants/margin_bottom = -16

[node name="Panel" type="Panel" parent="TextboxContainer"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_8litx")

[node name="MarginContainer" type="MarginContainer" parent="TextboxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="HBoxContainer" type="HBoxContainer" parent="TextboxContainer/MarginContainer"]
layout_mode = 2

[node name="Label2" type="RichTextLabel" parent="TextboxContainer/MarginContainer/HBoxContainer"]
texture_filter = 1
layout_mode = 2
size_flags_horizontal = 3
theme_override_fonts/normal_font = ExtResource("2_03f5e")
theme_override_font_sizes/normal_font_size = 25
bbcode_enabled = true
text = "Textos e falas de personagens vem aqui."
autowrap_mode = 2

[node name="ChoiceRoot" type="MarginContainer" parent="."]
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = 941.0
offset_top = 58.0
offset_right = -34.0
offset_bottom = 129.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = -67
theme_override_constants/margin_right = -16
theme_override_constants/margin_bottom = -16

[node name="Panel" type="Panel" parent="ChoiceRoot"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_8litx")

[node name="MarginContainer" type="MarginContainer" parent="ChoiceRoot"]
layout_mode = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="ScrollContainer" type="ScrollContainer" parent="ChoiceRoot/MarginContainer"]
layout_mode = 2

[node name="ChoiceContainer" type="VBoxContainer" parent="ChoiceRoot/MarginContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
alignment = 1

[node name="Portrait" type="TextureRect" parent="."]
texture_filter = 1
offset_left = 44.0
offset_top = 182.0
offset_right = 264.0
offset_bottom = 477.0
expand_mode = 4
stretch_mode = 4
